# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1463 $>
#
#
# [Note: This file does not mention every change made to the NetBSD source tree.
# For an exhaustive list, please subscribe to the `source-changes' mailing list,
# or see the mailing list archives.  For more information, send a message
# containing just the word `help' to `majordomo@NetBSD.org'.]
#
# ----------------------------------------------------------------------------
# PLEASE USE THE FOLLOWING STYLE WHEN ADDING ITEMS:
#
#	theme: Content ...
#		more content ...
#		more content. [developer DATE-FORMAT]
#
# That's it, one tab to start an item, and two tabs to indent the content.
# Also please start the content with a capital and end it with a dot.
#
# This is very important for the www scripts, otherwise it won't be able to
# parse the file and the HTML output will be mangled.
#
# See htutils/changes/changes2html script for more details.
#
# ----------------------------------------------------------------------------


Changes from NetBSD 5.0 to NetBSD 6.0:

	syslog(3): Import Martin Schuette's Summer of Code project:
		Reliable TCP connections, syslog protocol API,
		encryption. [christos 20081031]
	agp(4): Add support for Intel G35. [christos 20081108]
	kernel: Add generic producer/consumer queue. [matt 20081111]
	lkm: Removed. Superseded by the new module framework. [ad 20081112]
	module: Allow the POSIX semaphore code to be loaded as a module.
		[ad 20081112]
	module: Make compat_ossaudio a module. [ad 20081113]
	module: Make compat_ndis a module. [ad 20081113]
	build.sh: Add support for new MAKEVERBOSE levels 3 and 4.
		[apb 20081113]
	libfetch: Update to libfetch 2.20. Allow HTTP auth to be provided in
		URL. [joerg 20081114]
	module: Make POSIX AIO loadable as a module. [ad 20081114]
	amd64, i386: Make boot loader autoload a kernel module corresponding
		to the root file system type. [ad 20081119]
	module: Make the emulations, exec formats, coredump, NFS, and